# auto_research_with_council

./: .gitignore  GUIDE.md  NEXT_FEATURES.md  PRD.md  README.md  create_challenge.py  deep_research.py  pyproject.toml
council/: config.py  context.py  deliberate.py  display.py  git.py  implement.py  logger.py  main.py  openrouter.py  schemas.py  test.py
examples/amm-challenge/: program.md  strategy.sol
next_version_demo/: app.py  data.py
