[project]
name = "council"
version = "0.1.0"
description = "Multi-model autonomous research committee"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
tempo = ["pympp[tempo]>=0.6.0"]
demo = ["textual>=1.0.0"]

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
council = "council.main:cli"
council-demo = "next_version_demo.app:main"
